# spice.insolvent.app-backend

./: Cargo.toml  README.md
src/: api.rs  lib.rs  rkyv_wrappers.rs  tables.rs
src/api/: assets.rs  cmc.rs
src/shared/: shared_method.rs
src/shared/api/: Cargo.toml  cmc.rs  lib.rs  models.rs
