[package]
name = "spice-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
worktable = { git = "https://github.com/pathscale/WorkTable.git", ref = "a66de55572ed0a2c9a2e7e31aaf31873516f1bc0" }
rkyv = "0.7.42"
derive_more = "*"
eyre = "*"
ethers = "2.0.14"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.33.0", features = ["full"] }
