[package]
name = "spice-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
worktable = { git = "https://github.com/pathscale/WorkTable.git", ref = "a66de55572ed0a2c9a2e7e31aaf31873516f1bc0" }
rkyv = "0.7.42"
derive_more = "*"
eyre = "*"
ethers = "2.0.14"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.33.0", features = ["full"] }
dashmap = "6.1.0"
tracing = "0.1.41"
reqwest = "0.12.9"
lru = "0.12.5"
async-trait = "0.1.83"
web3 = "0.19.0"
chrono = "0.4.38"
serde_path_to_error = "0.1.16"
ethnum = "1.5.0"
tracing-subscriber = "0.3.19"
