[package]
name = "spice-backend"
version = "0.1.0"
edition = "2021"

[dependencies]


worktable = { git = "https://github.com/willco-1/WorkTable.git", branch = "pageid_mismatch" }
##worktable = {path = "../worktable"}
rkyv = "0.7.42"
derive_more = "*"
eyre = "*"
ethers = "2.0.14"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.33.0", features = ["full"] }
dashmap = "6.1.0"
tracing = "0.1.41"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls",
	"json",
	"gzip",
	"deflate",] }
lru = "0.12.5"
async-trait = "0.1.83"
web3 = "0.19.0"
chrono = "0.4.38"
serde_path_to_error = "0.1.16"
ethnum = "1.5.0"
tracing-subscriber = "0.3.19"
endpoint-libs = {git = "https://github.com/pathscale/endpoint-libs.git", ref = "e864d599370d6f2dee8a55da920671254e98993f"}
openssl = { version = "*", features = ["vendored"] }
sysinfo = "0.33.0"
alloy-primitives = "0.8.14"
clap = { version = "4.5.23", features = ["derive"] }


